@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-26T08:22:57Z",
-  "count_outdated" : 539,
-  "uniques_outdated" : 311,
-  "count" : 573,
+  "timestamp" : "2022-09-27T01:48:01Z",
+  "count_outdated" : 540,
+  "uniques_outdated" : 312,
+  "count" : 574,
   "uniques" : 330,
   "clones" : [
-    {
-      "timestamp": "2022-09-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 4,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
