@@ -1,3 +1,11 @@
+2022-09-27T01:48:01Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3132369065
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 539 / 330 573
+* notice: next accum: outdated-unq outdated-all / unq all: 312 540 / 330 574
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-12] / [2022-09-26]
+
 2022-09-26T08:22:57Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3126174700
 * notice: last 14d: unq all: 5 34
